--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 100/100 [00:13<00:00,  7.54it/s]\n"
+      "100%|█████████████████████████████████████████| 100/100 [00:09<00:00, 11.11it/s]\n"
      ]
     }
    ],
@@ -293,9 +293,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "iglm",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "iglm"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -307,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
